--- a/views/delivery.ejs
+++ b/views/delivery.ejs
@@ -157,6 +157,8 @@ ul.timeline > li:before {
                                         <div class="card-body">
                                             <ul class="nav flex-column">
                                                 <li class="nav-item"><a class="nav-link" href="/delivery-edit">Edit Data Pengiriman</a></li>
+                                                <li class="nav-item"><a class="nav-link" href="/delivery-edit">Print to PDF</a></li>
+
                                                 <li class="nav-item"><a class="nav-link" data-toggle="modal" data-target="#exampleModalCenter">Update status Pengiriman</a></li>
                                             </ul>
                                         </div>
