--- a/views/delivery-add.ejs
+++ b/views/delivery-add.ejs
@@ -50,7 +50,7 @@
                                 <!-- sadasd -->
                                 <div class="row" style="align-items:center;">
                                     <div class="col-md-6"> <h4 class="mb-3 mt-4">Pick-up</h4></div>
-                                    <div class="col-md-6"> <button class="btn btn-outline-secondary rounded-pill my-1" style="float: right; font-size: 0.9rem;">+ pickup point</button></div>
+                                    <div class="col-md-6"> <button class="btn btn-green rounded-pill my-1 btn-sm float-right">+ pickup point</button></div>
                                  </div>
                                  <ul class="list-group mb-3">
                                     <li class="list-group-item d-flex justify-content-between lh-condensed" style="background-color: #e3e7ee;">
@@ -63,6 +63,7 @@
                                                 <div class="col-6">
                                                     <div class="form-group"><label for="exampleFormControlInput1">Nama PIC</label><input class="form-control" id="exampleFormControlInput1" type="name" placeholder="0888811" /></div>
                                                 </div>
+                                                
                                                
                                             </div>
                                             <div class="form-row">
@@ -88,145 +89,73 @@
                                         <div class="col-6"> 
                                             <div class="row mt-4" style="align-items:center;">
                                                 <div class="col-md-6"> <h6 class="mb-3 mt-4">Item(s)</h6></div>
-                                                <div class="col-md-6"> <button class="btn btn-outline-secondary rounded-pill my-1" style="float: right; font-size: 0.9rem;">+ item</button></div>
+                                                <div class="col-md-6"> <button class="btn btn-green rounded-pill my-1 btn-sm float-right">+ item</button></div>
                                              </div>
                                              <ul class="list-group mb-3">
                                                 <li class="list-group-item d-flex justify-content-between lh-condensed">
                                                   <div>
                                                     <div class="form-row">
                                                         <div class="col-3">
-                                                            <div class="form-group"><label for="exampleFormControlInput1">Produk</label><input class="form-control" id="exampleFormControlInput1" type="phone" placeholder="Asep" /></div>
+                                                            <div class="form-group"><label for="exampleFormControlInput1">Produk</label><input class="form-control form-control-sm" id="exampleFormControlInput1" type="phone" placeholder="Asep" /></div>
                                                         </div>
                                                         <div class="col-4">
-                                                            <div class="form-group"><label for="exampleFormControlInput1">Deskripsi</label><textarea class="form-control" id="exampleFormControlInput1" type="phone" placeholder="Asep" rows="3" ></textarea> </div>
+                                                            <div class="form-group"><label for="exampleFormControlInput1">Deskripsi</label><textarea class="form-control form-control-sm" id="exampleFormControlInput1" type="phone" placeholder="Asep" rows="3" ></textarea> </div>
                                                         </div>
                                                         <div class="col-2">
-                                                            <div class="form-group"><label for="exampleFormControlInput1">Unit</label><input class="form-control" id="exampleFormControlInput1" type="phone" placeholder="Asep" /></div>
+                                                            <div class="form-group"><label for="exampleFormControlInput1">Unit</label><input class="form-control form-control-sm" id="exampleFormControlInput1" type="phone" placeholder="Asep" /></div>
                                                         </div>
-                                                        <div class="col-2">
-                                                            <div class="form-group"><label for="exampleFormControlInput1">Satuan</label><input class="form-control" id="exampleFormControlInput1" type="phone" placeholder="Asep" /></div>
-                                                        </div>
-            
-                                                    </div>
-                                                  </div>
-                                                  <span class="text-muted">x</span>
-                                                </li>
-                                                <li class="list-group-item d-flex justify-content-between lh-condensed">
-                                                    <div>
-                                                      <div class="form-row">
-                                                          <div class="col-3">
-                                                              <div class="form-group"><label for="exampleFormControlInput1">Produk</label><input class="form-control" id="exampleFormControlInput1" type="phone" placeholder="Asep" /></div>
-                                                          </div>
-                                                          <div class="col-4">
-                                                              <div class="form-group"><label for="exampleFormControlInput1">Deskripsi</label><textarea class="form-control" id="exampleFormControlInput1" type="phone" placeholder="Asep" rows="3" ></textarea> </div>
-                                                          </div>
-                                                          <div class="col-2">
-                                                              <div class="form-group"><label for="exampleFormControlInput1">Unit</label><input class="form-control" id="exampleFormControlInput1" type="phone" placeholder="Asep" /></div>
-                                                          </div>
-                                                          <div class="col-2">
-                                                              <div class="form-group"><label for="exampleFormControlInput1">Satuan</label><input class="form-control" id="exampleFormControlInput1" type="phone" placeholder="Asep" /></div>
-                                                          </div>
-              
-                                                      </div>
-                                                    </div>
-                                                    <span class="text-muted">x</span>
-                                                </li>
-                                            </ul>
-                                        </div>
-                                      </div>
-                                      <span class="text-muted">x</span>
-                                    </li>
-                                </ul>
-                                <ul class="list-group mb-3">
-                                    <li class="list-group-item d-flex justify-content-between lh-condensed" style="background-color: #e3e7ee;">
-                                      <div class="row">
-                                        <div class="col-6">
-                                            <div class="form-row">
-                                                <div class="col-6">
-                                                    <div class="form-group"><label for="exampleFormControlInput1">Nama</label><input class="form-control" id="exampleFormControlInput1" type="name" placeholder="0888811" /></div>
-                                                </div>
-                                                <div class="col-6">
-                                                    <div class="form-group"><label for="exampleFormControlInput1">Nama PIC</label><input class="form-control" id="exampleFormControlInput1" type="name" placeholder="0888811" /></div>
-                                                </div>
-                                               
-                                            </div>
-                                            <div class="form-row">
-                                        
-                                                <div class="col-6">
-                                                    <div class="form-group"><label for="exampleFormControlInput1">No Telp</label><input class="form-control" id="exampleFormControlInput1" type="name" placeholder="0811982345" /></div>
-                                                </div>
-                                                <div class="col-6">
-                                                    <div class="form-group"><label for="exampleFormControlInput1">Jam Pickup</label><input class="form-control" id="exampleFormControlInput1" type="name" placeholder="0811982345" /></div>
-                                                </div>
-                                            </div>
-                                            <div class="form-row">
-                                                <div class="col-12">                                
-                                                    <div class="form-group"><label for="exampleFormControlInput1">Detail lokasi/Catatan</label> <textarea class="form-control" id="exampleFormControlInput1" type="text" placeholder="Nama Perusahaan Pengirim" rows="3"></textarea></div>
-                                                </div>
-                                            </div>
-                                            <div class="form-row">
-                                                <div class="col-12">                                
-                                                    <div class="form-group"><label for="exampleFormControlInput1">Detail lokasi/Catatan</label> <textarea class="form-control" id="exampleFormControlInput1" type="text" placeholder="Nama Perusahaan Pengirim" rows="3"></textarea></div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="col-6"> 
-                                            <div class="row mt-4" style="align-items:center;">
-                                                <div class="col-md-6"> <h6 class="mb-3 mt-4">Item(s)</h6></div>
-                                                <div class="col-md-6"> <button class="btn btn-outline-secondary rounded-pill my-1" style="float: right; font-size: 0.9rem;">+ item</button></div>
-                                             </div>
-                                             <ul class="list-group mb-3">
-                                                <li class="list-group-item d-flex justify-content-between lh-condensed">
-                                                  <div>
-                                                    <div class="form-row">
                                                         <div class="col-3">
-                                                            <div class="form-group"><label for="exampleFormControlInput1">Produk</label><input class="form-control" id="exampleFormControlInput1" type="phone" placeholder="Asep" /></div>
+                                                            <div class="form-group"><label for="exampleFormControlInput1">Satuan</label><input class="form-control form-control-sm" id="exampleFormControlInput1" type="phone" placeholder="Asep" /></div>
                                                         </div>
-                                                        <div class="col-4">
-                                                            <div class="form-group"><label for="exampleFormControlInput1">Deskripsi</label><textarea class="form-control" id="exampleFormControlInput1" type="phone" placeholder="Asep" rows="3" ></textarea> </div>
-                                                        </div>
-                                                        <div class="col-2">
-                                                            <div class="form-group"><label for="exampleFormControlInput1">Unit</label><input class="form-control" id="exampleFormControlInput1" type="phone" placeholder="Asep" /></div>
-                                                        </div>
-                                                        <div class="col-2">
-                                                            <div class="form-group"><label for="exampleFormControlInput1">Satuan</label><input class="form-control" id="exampleFormControlInput1" type="phone" placeholder="Asep" /></div>
-                                                        </div>
+                                                       
             
                                                     </div>
                                                   </div>
-                                                  <span class="text-muted">x</span>
+                                                  <button class="btn  btn-outline-red btn-icon btn-xs" type="button">
+                                                    <i class="fas fa-trash"></i>
+                                                </button>
                                                 </li>
                                                 <li class="list-group-item d-flex justify-content-between lh-condensed">
                                                     <div>
                                                       <div class="form-row">
                                                           <div class="col-3">
-                                                              <div class="form-group"><label for="exampleFormControlInput1">Produk</label><input class="form-control" id="exampleFormControlInput1" type="phone" placeholder="Asep" /></div>
+                                                              <div class="form-group"><label for="exampleFormControlInput1">Produk</label><input class="form-control form-control-sm" id="exampleFormControlInput1" type="phone" placeholder="katun" /></div>
                                                           </div>
                                                           <div class="col-4">
-                                                              <div class="form-group"><label for="exampleFormControlInput1">Deskripsi</label><textarea class="form-control" id="exampleFormControlInput1" type="phone" placeholder="Asep" rows="3" ></textarea> </div>
+                                                              <div class="form-group"><label for="exampleFormControlInput1">Deskripsi</label><textarea class="form-control form-control-sm" id="exampleFormControlInput1" type="phone" placeholder="warna hitam" rows="3" ></textarea> </div>
                                                           </div>
                                                           <div class="col-2">
-                                                              <div class="form-group"><label for="exampleFormControlInput1">Unit</label><input class="form-control" id="exampleFormControlInput1" type="phone" placeholder="Asep" /></div>
+                                                              <div class="form-group "><label for="exampleFormControlInput1">Unit</label><input class="form-control form-control-sm" id="exampleFormControlInput1" type="phone" placeholder="5" /></div>
                                                           </div>
-                                                          <div class="col-2">
-                                                              <div class="form-group"><label for="exampleFormControlInput1">Satuan</label><input class="form-control" id="exampleFormControlInput1" type="phone" placeholder="Asep" /></div>
+                                                          <div class="col-3">
+                                                              <div class="form-group"><label for="exampleFormControlInput1">Satuan</label><input class="form-control form-control-sm" id="exampleFormControlInput1" type="phone" placeholder="Meter" /></div>
                                                           </div>
               
                                                       </div>
                                                     </div>
-                                                    <span class="text-muted">x</span>
+                                                    <button class="btn  btn-outline-red btn-icon btn-xs" type="button">
+                                                        <i class="fas fa-times"></i>
+                                                    </button>
                                                 </li>
                                             </ul>
                                         </div>
                                       </div>
-                                      <span class="text-muted">x</span>
+                                      <button class="btn  btn-outline-red  btn-icon btn-xs" type="button">
+                                        <i class="fas fa-times"></i>
+                                    </button>
                                     </li>
                                 </ul>
+                                <div class="row mt-2  mb-2 mr-1" >
+                                    <div class="col-12">
+                                        <button class="btn btn-green rounded-pill my-1 btn-sm float-right">+ pickup point</button>                                    </div>
+                                    </div>
+                                <div class="row">
+                                    <button class="btn btn-primary rounded-pill px-4">Buat Order</button>  
+                                </div>
                             </div>
 
-                               
+                          
                         </div> 
-                        <a class="btn btn-success btn-sm" type="button" href="/deliveries" >Buat pengiriman</a>
                     </div>
                 </main>
                 <footer class="footer mt-auto footer-light">
