--- a/views/delivery-add.ejs
+++ b/views/delivery-add.ejs
@@ -31,7 +31,7 @@
 
                                     </div>
                                     <div class="col-md-4">
-                                        <div class="form-group"><label for="exampleFormControlInput1">Perusahaan Pengirim</label><input class="form-control" id="exampleFormControlInput1" type="text" placeholder="Nama Perusahaan Pengirim" /></div>
+                                        <div class="form-group"><label for="exampleFormControlInput1">Klien</label><input class="form-control" id="exampleFormControlInput1" type="text" placeholder="Nama Perusahaan Pengirim" /></div>
 
                                     </div>
                                     <div class="col-md-4">
@@ -48,7 +48,7 @@
                                 <section id="pickup">
                                     <!-- judul pickup-->
                                     <div class="row mb-3 mt-3">
-                                        <div class="col-6"> <h4>Pengambilan</h4></div>
+                                        <div class="col-6"> <h4>PICK UP</h4></div>
                                         <div class="col-6"> <button class="btn btn-green rounded-pill  btn-sm float-right">+ pickup point</button></div>
                                     </div>
                                     <!-- /judul bagian pickup -->
@@ -84,7 +84,7 @@
                                                             <div class="form-group"><label for="exampleFormControlInput1">Telp</label><input class="form-control form-control-sm" id="exampleFormControlInput1" type="name" placeholder="0811982345" /></div>
                                                         </div>
                                                         <div class="col-6">
-                                                            <div class="form-group"><label for="exampleFormControlInput1">Jam Pickup</label><input class="form-control form-control-sm" id="exampleFormControlInput1" type="name" placeholder="0811982345" /></div>
+                                                            <div class="form-group"><label for="exampleFormControlInput1">Ready to pick-up</label><input class="form-control form-control-sm" id="exampleFormControlInput1" type="name" placeholder="0811982345" /></div>
                                                         </div>
                                                     </div>
                                                     <div class="form-row">
@@ -191,7 +191,7 @@
 
                                 <!-- section penerima -->
                                 <section id="receiver"> 
-                                    <h4 class="mb-3 mt-3">Penerima</h4>
+                                    <h4 class="mb-3 mt-3">DROP OFF</h4>
                                     <div class="row">
                                         <div class="col-md-6">
                                             <div class="form-group"><label for="exampleFormControlInput1">Nama</label><input class="form-control" id="exampleFormControlInput1" type="name" placeholder="Reyhan" /></div>
