--- a/views/delivery-add.ejs
+++ b/views/delivery-add.ejs
@@ -23,7 +23,7 @@
                     </div>
                     <div class="container-fluid mt-4">
                         <div class="card mb-4">
-                            <div class="card-header" style="color:black;">Order info</div>
+                            <div class="card-header lead text-dark">ORDER INFO</div>
                             <div class="card-body">
                                 <div class="row">
                                     <div class="col-md-4">
@@ -48,7 +48,7 @@
                                 <section id="pickup">
                                     <!-- judul pickup-->
                                     <div class="row mb-3 mt-3">
-                                        <div class="col-6"> <h4>PICK UP</h4></div>
+                                        <div class="col-6"> <h4 class="text-dark">PICK UP</h4></div>
                                         <div class="col-6"> <button class="btn btn-green rounded-pill  btn-sm float-right">+ pickup point</button></div>
                                     </div>
                                     <!-- /judul bagian pickup -->
