--- a/views/delivery-finish.ejs
+++ b/views/delivery-finish.ejs
@@ -32,6 +32,9 @@ ul.timeline > li:before {
     height: 20px;
     z-index: 400;
 }
+.ul.timeline li:first-child:after {
+      content: none;
+  }
     .info >p{
     margin-bottom: 0.2rem;
 }
@@ -41,8 +44,6 @@ ul.timeline > li:before {
     background-color: rgb(255, 255, 255);
     border-bottom: 1px solid rgba(31, 45, 65, 0.125);
 }
-
-
 .progressbar {
       counter-reset: step;
   }
@@ -75,6 +76,7 @@ ul.timeline > li:before {
       content: '';
       position: absolute;
       background-color: #7d7d7d;
+      top: 15px;
       left: -50%;
       z-index: -1;
   }
@@ -158,7 +160,9 @@ ul.timeline > li:before {
                                             </div>
                                             <div class="col-6">
                                                 <div class="float-right">
-                                                    <button class="btn btn-success btn-sm" type="button" data-toggle="modal" data-target="#konfirmasi">Approved</button>
+                                                    <button class="btn btn-success btn-sm" type="button" data-toggle="modal" data-target="#konfirmasi">Deliver</button>
+                                                    <button class="btn btn-success btn-sm" type="button" data-toggle="modal" data-target="#konfirmasi">Transit</button>
+
                                                 <a class="btn btn-red btn-sm" type="button" href="/delivery-cancel">Cancel</a>
                                                 </div>
                                             </div>
@@ -390,99 +394,37 @@ ul.timeline > li:before {
                                                 </div>
                                             </div>
                                         </div>
+                                        <div class="card-header" style="color:black;">Notes</div>
+                                        <div class="card-body">
+                                            
+                                            
+                                                    <div class="row">
+                                                        <div>
+                                                            <ul class="timeline">
+                                                                <li>
+                                                                    <p>4 April 2020</br>
                                         
-<!-- <style>
-    .timelines ul{
-    list-style: none;
-    position: relative;
-    padding: 0;
-}
-.timelines ul:before{
-    content: '';
-    position: absolute;
-    width: 2px;
-    height: 80%;
-    top:0;
-    left: 0;
-    background:black;
-}
-.timelines ul{
-    display: flex; flex-direction: column-reverse; 
-}
-.timelines ul li{
-    padding: 20px 20px;
-}
-.timelines ul li span{
-    color: coral;
-    position: absolute;
-    left: -2rem;
-    font-size: 12px;
-    background-color:#eff3f9;
-    padding: 5px;
-}
-.timelines ul li div{
-    padding: 0 10px;
-}
-.timelines ul > :first-child :before {
-      content: '';
-      height: 0;
-  }
-</style> -->
-                                    </div>
-                                    <!-- <div class="container-fluid timelines">
-                                        <h3>Notes</h3>
-                                        <ul>
-                                            <li>
-                                                <span>
-                                                    20 Maret
-                                                </span>
-                                                <div>
-                                                    <p>
-                                                        
-                                                        asdasdasdsa
-                                                        asdasdsa
-
-                                                    </p>
-                                                    <p>
-                                                        sadasd
-                                                    </p>
-                                                </div>
-                                            </li>
-                                            <li>
-                                                <span>
-                                                    20 Maret
-                                                </span>
-                                                <div>
-                                                    <p>
-                                                        2
-                                                    </p>
-                                                </div>
+                                                                    Driver already pickup the item from seller</p>
+                                                                </li>
+                                                                <li>
+                                                                    <p>3 April 2020</br>
+                                        
+                                                                    Courier assign</p>
+                                                                </li>
+                                                                <li>
+                                                                    <p>1 April 2020</br>
+                        
+                                                                    Order received</p>
+                                                                </li>
+                                                            </ul>
+                                                        </div>
+                                                    </div>
                                                 
-                                            </li>
-                                            <li>
-                                                <span>
-                                                    20 Maret
-                                                </span>
-                                                <div>
-                                                    <p>
-                                                        3
-                                                    </p>
-                                                </div>
-                                            </li>
-                                            <li>
-                                                <span>
-                                                    20 Maret
-                                                </span>
-                                                <div>
-                                                    <p>
-                                                       4
-                                                    </p>
-                                                </div>
-                                            </li>
-                                        </ul>
-                                    </div> -->
+                                           
+                                        </div>
+                                    </div>
                                 </div>
-                             
+                              
                             </div>
                            
                         </div>
