--- a/views/delivery-add.ejs
+++ b/views/delivery-add.ejs
@@ -26,8 +26,15 @@
                             <div class="card-header lead text-dark">ORDER INFO</div>
                             <div class="card-body">
                                 <div class="row">
+                                    <div class="col-12">
+                                        <div class="form-group"><label for="exampleFormControlInput1">Airway bill</label><input class="form-control "  type="name" placeholder="Generate by system" disabled/></div>
+
+                                    </div>
+
+                                </div>
+                                <div class="row">
                                     <div class="col-md-4">
-                                        <div class="form-group"><label for="exampleFormControlInput1">Airwaybill</label><input class="form-control "  type="name" placeholder="Generate by system" disabled="" /></div>
+                                        <div class="form-group"><label for="exampleFormControlInput1">Deadline Delivery</label><input class="form-control "  type="name" /></div>
 
                                     </div>
                                     <div class="col-md-4">
@@ -80,12 +87,10 @@
                                                     </div>
                                                     <div class="form-row">
                                                 
-                                                        <div class="col-6">
+                                                        <div class="col-12">
                                                             <div class="form-group"><label for="exampleFormControlInput1">Telp</label><input class="form-control form-control-sm" id="exampleFormControlInput1" type="name" placeholder="0811982345" /></div>
                                                         </div>
-                                                        <div class="col-6">
-                                                            <div class="form-group"><label for="exampleFormControlInput1">Ready to pick-up</label><input class="form-control form-control-sm" id="exampleFormControlInput1" type="name" placeholder="0811982345" /></div>
-                                                        </div>
+                                                        
                                                     </div>
                                                     <div class="form-row">
                                                         
