--- a/views/delivery-confirmed.ejs
+++ b/views/delivery-confirmed.ejs
@@ -125,6 +125,11 @@ ul.timeline > li:before {
                                             <li class="breadcrumb-item active">#{no order}</li>
                                         </ol>
                                     </div>
+                                    <div class="page-header-subtitle">
+                                        <button class="btn btn-primary btn-sm" type="button" data-toggle="modal" data-target="#delivery">Edit</button>
+
+                                     </div>
+
                                    
                                    
                                 </div>
@@ -380,7 +385,7 @@ ul.timeline > li:before {
                                 <div class="form-group"><label for="exampleFormControlInput1">Driver phone</label><input class="form-control "  type="name" /></div>
 
                             </div>
-                            <div class="modal-footer"><button class="btn btn-red btn-sm" type="button" data-dismiss="modal">Close</button><button class="btn btn-success btn-sm" type="button">Submit</button></div>
+                            <div class="modal-footer"><button class="btn btn-red btn-sm" type="button" data-dismiss="modal">Close</button><a href="/delivery-delivering" class="btn btn-success btn-sm" type="button">Submits</a></div>
                         </div>
                     </div>
                 </div>
