--- a/views/delivery-delivering.ejs
+++ b/views/delivery-delivering.ejs
@@ -247,7 +247,7 @@ ul.timeline > li:before {
                                                                     <a class="dropdown-item" href="javascript:void(0);">Fullfilment center</a>
                                                                     <a class="dropdown-item" data-toggle="modal" data-target="#pickup">Change Driver</a>
                                                                     <a class="dropdown-item" href="javascript:void(0);">Reject</a>
-                                                                    <a class="dropdown-item" href="javascript:void(0);">Finish</a>
+                                                                    <a class="dropdown-item" data-toggle="modal" data-target="#finish">Finish</a>
 
                                                                 </div>
                                                             </div>      
@@ -314,8 +314,17 @@ ul.timeline > li:before {
                                                                     </tbody>
                                                                 </table>
                                                             </div>
-                                                            
-
+                                                            <div class="col-4 info">
+                                                                <p >
+                                                                    Nama Driver
+                                                                    </p >
+                                                                    <p style="color:black;" class="font-weight-bold" >
+                                                                        Bambang Fernandes
+                                                                    </p>
+                                                                    <p style="color:black;">
+                                                                        0811982222
+                                                                    </p>
+                                                            </div>
                                                         </div>
                                                         
                                                         </div>
@@ -352,6 +361,7 @@ ul.timeline > li:before {
                                                 
                                            
                                         </div>
+                                        
                                     </div>
                                 </div>
                               
@@ -382,7 +392,60 @@ ul.timeline > li:before {
                                 <div class="form-group"><label for="exampleFormControlInput1">Driver phone</label><input class="form-control "  type="name" /></div>
 
                             </div>
-                            <div class="modal-footer"><button class="btn btn-red btn-sm" type="button" data-dismiss="modal">Close</button><button class="btn btn-success btn-sm" type="button">Submit</button></div>
+                            <div class="modal-footer"><button class="btn btn-red btn-sm" type="button" data-dismiss="modal">Close</button><a href="/delivery-delivering" class="btn btn-success btn-sm" type="button">Submits</a></div>
+                        </div>
+                    </div>
+                </div>
+            
+                <!-- modal finish -->
+                <div class="modal fade" id="finish" data-backdrop="static" tabindex="-1" role="dialog" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="staticBackdropLabel">Assign Driver</h5>
+                                <button class="close" type="button" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
+                            </div>
+                            <div class="modal-body">
+                                <div class="datatable table-responsive mt-4">
+                                    <table class="table table-bordered table-hover" id="dataTable" width="100%" cellspacing="0">
+                                        <thead>
+                                            <tr>
+                                                <th>Nama produk</th>
+                                                <th>Deskripsi produk</th>
+                                                <th>Jumlah</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            <tr>
+                                                <td>Sutra
+                                                </td>
+                                                <td> 
+                                                    warna beige
+                                                </td>
+                                                <td>
+                                                    <input class="form-control form-control-sm" type="text" placeholder=" ">
+                                                </td>
+                                               
+                                            </tr> 
+                                            <tr>
+                                                <td>Combat 40
+                                                </td>
+                                                <td> 
+                                                    warna beige
+                                                </td>
+                                                <td>
+                                                    <input class="form-control form-control-sm" type="text" placeholder=" ">
+
+                                                </td>
+                                            
+                                            </tr>                                                        
+                                        </tbody>
+                                    </table>
+                                </div>
+                                
+
+                            </div>
+                            <div class="modal-footer"><button class="btn btn-red btn-sm" type="button" data-dismiss="modal">Close</button><a href="/delivery-finish" class="btn btn-success btn-sm" type="button">Submits</a></div>
                         </div>
                     </div>
                 </div>
