added dispatch screen

--- a/views/delivery-dispatch.ejs
+++ b/views/delivery-dispatch.ejs
@@ -234,7 +234,26 @@ ul.timeline > li:before {
                                                
                                             </div>
                                         </div>
-                                        <div class="card-header" style="color:black;">Pengambilan</div>
+                                        <div class="card-header" style="color:black;">
+                                            <div class="col-6">
+                                                Pengambilan
+                                            </div>
+                                            
+                                            <div class="col-6 ">
+                                                <div class="dropdown float-right">
+
+                                                    <button class="btn btn-green btn-sm dropdown-toggle" id="dropdownFadeIn" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dispatch</button>
+                                                    <div class="dropdown-menu animated--fade-in" aria-labelledby="dropdownFadeIn">
+                                                        <a class="dropdown-item" href="javascript:void(0);">Fullfilment center</a>
+                                                        <a class="dropdown-item" href="/delivery-confirmed">Driver</a>
+                                                    </div>
+                                                </div>      
+                                            </div>
+                                        
+                                        
+                                        
+                                        
+                                        </div>
                                         <div class="card-body">
                                             <div class= "col-lg-12 p-4" style="background-color:#e9edf3;">
                                                 <div class="position-relative">
@@ -243,16 +262,10 @@ ul.timeline > li:before {
                                                             <span class="badge badge-primary text-wrap ml-2">
                                                                Picking up
                                                             </span>
+                                                            
                                                         </div>
                                                         <div class="col-6 ">
-                                                            <div class="dropdown float-right">
-
-                                                                <button class="btn btn-green btn-sm dropdown-toggle" id="dropdownFadeIn" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Update</button>
-                                                                <div class="dropdown-menu animated--fade-in" aria-labelledby="dropdownFadeIn">
-                                                                    <a class="dropdown-item" data-toggle="modal" data-target="#pickup">Assign to Driver</a>
-                                                                    <a class="dropdown-item" href="javascript:void(0);">Reject</a>
-                                                                </div>
-                                                            </div>      
+                                                           
                                                         </div>
                                                     </div>
 
