added dispatch screen

--- a/views/delivery-confirmed.ejs
+++ b/views/delivery-confirmed.ejs
@@ -247,9 +247,9 @@ ul.timeline > li:before {
                                                         <div class="col-6 ">
                                                             <div class="dropdown float-right">
 
-                                                                <button class="btn btn-green btn-sm dropdown-toggle" id="dropdownFadeIn" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Update</button>
+                                                                <button class="btn btn-green btn-sm dropdown-toggle" id="dropdownFadeIn" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Asign to driver</button>
                                                                 <div class="dropdown-menu animated--fade-in" aria-labelledby="dropdownFadeIn">
-                                                                    <a class="dropdown-item" data-toggle="modal" data-target="#pickup">Assign to Driver</a>
+                                                                    <a class="dropdown-item" data-toggle="modal" data-target="#pickup">Input Driver's Data</a>
                                                                     <a class="dropdown-item" href="javascript:void(0);">Reject</a>
                                                                 </div>
                                                             </div>      
