--- a/views/delivery.ejs
+++ b/views/delivery.ejs
@@ -511,7 +511,7 @@ ul.timeline > li:before {
                                 <div class="form-group"><label for="exampleFormControlInput1">Airwaybill</label><input class="form-control "  type="name" /></div>
 
                             </div>
-                            <div class="modal-footer"><button class="btn btn-red btn-sm" type="button" data-dismiss="modal">Close</button> <a class="btn btn-success btn-sm" type="button" href="/delivery-confirmed">Submit</a></div>
+                            <div class="modal-footer"><button class="btn btn-red btn-sm" type="button" data-dismiss="modal">Close</button> <a class="btn btn-success btn-sm" type="button" href="/delivery-dispatch">Submit</a></div>
                         </div>
                     </div>
                 </div>
